a1/brendan_gordon/TEST_PROGRAMS/invalidtype/shabbir_hussain/prog5.min
var x : float;

x = 1.0;

while x do
    x = x + 1;
done

print x;

